--- a/MunicipalityOfRochester.csproj
+++ b/MunicipalityOfRochester.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="bootstrap" Version="5.3.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.25" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.25">
       <PrivateAssets>all</PrivateAssets>
@@ -26,8 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\img\manager\" />
-    <Folder Include="wwwroot\img\employee\" />
+    <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
 </Project>
