--- a/MunicipalityOfRochester.csproj
+++ b/MunicipalityOfRochester.csproj
@@ -27,7 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\img\" />
+    <Folder Include="wwwroot\img\manager\" />
+    <Folder Include="wwwroot\img\employee\" />
   </ItemGroup>
 
 </Project>
